Fix: Remove inputs, set gap and width

--- a/components/sections/two-columns/two-columns.scss
+++ b/components/sections/two-columns/two-columns.scss
@@ -3,6 +3,8 @@
     border-radius: var(--radius);
     overflow: hidden;
     width: 100%;
+    gap: 40px;
+    max-width: 1200px;
 
     >.--left {
         flex: 1;
@@ -10,29 +12,5 @@
 
     >.--right {
         flex: 1;
-    }
-
-    &.--small {
-        max-width: 580px;
-    }
-
-    &.--medium {
-        max-width: 900px;
-    }
-
-    &.--large {
-        max-width: 1200px;
-    }
-
-    &.--left {
-        justify-content: left;
-    }
-
-    &.--center {
-        justify-content: center;
-    }
-
-    &.--right {
-        justify-content: right;
     }
 }
